discussion/kv_engine/155454/155454_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37956: Fix to missed gsl::not_null<const void*> to const void*

Fix two cases of the use of gsl::not_null<const void*> which where not
picked up when refactoring AddStatFn. This should be moved to const
void*, and the arg changed to ctx.

Change-Id: If3f51a2f76235e2a27db5a46f04437839e30c712

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-09 13:40:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-09 13:46:14.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 14:25:42.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9676/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9676/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10:
error: "stats_config.def.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9676/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/212/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10323/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11251/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11670/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19255/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31310/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-09 14:26:46.000000000
Message: 
Patch Set 1: Verified+1

Overriding -1 from clang-tidy as it's not related to this patch
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-09 14:26:49.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
